Canonicalize Java formatting